# shrec2020_relief

./: README.md  script.sh
LatexDescription/: main.tex  references.bib
MeshLib/: CMakeLists.txt
MeshLib/AdaptiveClustering/: CMakeLists.txt  Sources.cmake  Sources.cmake~
MeshLib/AdaptiveClustering/include/: Point.h  PointND.h  adaptiveClustering.h  adaptive_clustering_global.h  cluster.h
MeshLib/AdaptiveClustering/src/: adaptiveClustering.cpp  cluster.cpp
MeshLib/Detector/: CMakeLists.txt  Sources.cmake
MeshLib/Detector/include/: Face.h  Face.h~  HarrisDetector.h  HarrisDetector.h~  Mesh.h  Mesh.h~  Vertex.h  Vertex.h~  harris_global.h
MeshLib/Detector/src/: Face.cpp  HarrisDetector.cpp  Mesh.cpp  Vertex.cpp
MeshLib/Harris3D-Firme/: CMakeLists.txt  main.cpp
MeshLib/QCustomPlot/interaction-example/: Makefile  interaction-example  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_mainwindow.h
MeshLib/QCustomPlot/plot-examples/: Makefile  main.cpp  mainwindow.cpp  mainwindow.h  moc_mainwindow.cpp  moc_qcustomplot.cpp  plot-examples  ui_mainwindow.h
MeshLib/util/: CMakeLists.txt  Sources.cmake  Sources.cmake~
MeshLib/util/include/: Clock.h  Clock.h~  Properties.h  Properties.h~  util.h  util.h~  util_global.h
MeshLib/util/src/: Properties.cpp
PrepareDataSHREC2020/: CMakeLists.txt  script.sh
PrepareDataSHREC2020/src/: prepareDataset.cpp
SQFD/: runScriptPatterns.m
SQFD/tools/: Eigen2HKS2.m  Eigen2SIHKS.m  Eigen2WKS.m  adaptiveClustering.mexa64  adaptiveClustering.mexw64  computeDissimilarityMatrixSQFD.mexa64  computeDissimilarityMatrixSQFD.mexw64  off2spectrum.m  remesh.m  saveMatrix.m  scalespace.m  symmshlp_matrix.m  symmshlpmatrix.mexw64
pointnet/pointnet/: model.py
pointnet/utils/: compute_feature.py  compute_feature.py~
